[metadata]
name = pylontech-python-tomcat42
version = file:version
author = Bernd Singer
author_email = singer@nefkom.net
description = Communicate to Pylontech batteries using a RS485 interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tomcat42/pylontech-python/
project_urls =
    Bug Tracker = https://github.com/Tomcat42/pylontech-python/issues
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pylontech
